# DynaHack

./: CMakeLists.txt  files.txt
doc/: README.oprops.md  build-cygwin.md  build-linux.md  build-mingw.md  build-osx.md  changelog.txt  colormap.conf  dgamelaunch.md  save-recovery.md  xlogfile.md
dynamohack/: CMakeLists.txt
dynamohack/include/: nhcurses.h
dynamohack/src/: color.c  dialog.c  gameover.c  getline.c  keymap.c  main.c  map.c  menu.c  messages.c  netgame.c  netplay.c  options.c  outchars.c  playerselect.c  replay.c  rungame.c  sidebar.c  status.c  topten.c  windows.c
dynamohack_server/: CMakeLists.txt  nhserver.conf.example  protocol_specification.txt
dynamohack_server/include/: nhserver.h
dynamohack_server/src/: auth.c  clientcmd.c  clientmain.c  config.c  db_pgsql.c  kill.c  log.c  miscsetup.c  server.c  srvmain.c  winprocs.c
include/: dynamohack.h  dynamohack_client.h  dynamohack_types.h
libdynamohack/: CMakeLists.txt
libdynamohack/dat/: Arch.des  Barb.des  CMakeLists.txt  Caveman.des  Healer.des  Knight.des  Monk.des  Priest.des  Ranger.des  Rogue.des  Samurai.des  Tourist.des  Valkyrie.des  Wizard.des  bigroom.des  castle.des  data.base  endgame.des  gehennom.des  knox.des  medusa.des  mines.des  oracle.des  quest.txt  rumors.fal  sokoban.des  tower.des  yendor.des
libdynamohack/include/: align.h  artifact.h  artilist.h  attrib.h  color.h  config.h  coord.h  decl.h  dgn_file.h  display.h  dlb.h  dungeon.h  edog.h  emin.h  engrave.h  epri.h  eshk.h  extern.h  flag.h  global.h  hack.h  lev.h  magic.h  mfndpos.h  mkroom.h  monattk.h  mondata.h  monflag.h  monst.h  monsym.h  monuse.h  ntconf.h  obj.h  objclass.h  patchlevel.h  permonst.h  prop.h  qtext.h  quest.h  rect.h  (+15 more)
libdynamohack/src/: CMakeLists.txt  allmain.c  apply.c  artifact.c  attrib.c  ball.c  bones.c  botl.c  cmd.c  dbridge.c  decl.c  detect.c  dig.c  display.c  dlb.c  do.c  do_name.c  do_wear.c  dog.c  dogmove.c  dokick.c  dothrow.c  drawing.c  dump.c  dungeon.c  eat.c  end.c  engrave.c  exper.c  explode.c  extralev.c  files.c  fountain.c  hack.c  hacklib.c  history.c  invent.c  light.c  lock.c  log.c  (+70 more)
libdynamohack/util/: CMakeLists.txt  dgn_comp.l  dgn_comp.y  dgn_main.c  dlb_main.c  lev_comp.l  lev_comp.y  lev_main.c  makedefs.c  panic.c
libdynamohack_client/: CMakeLists.txt
libdynamohack_client/include/: nhclient.h
libdynamohack_client/src/: clientapi.c  connection.c  netcmd.c
